--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "psmx-assembler"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+build = "build.rs"
 
 [dependencies]
+regex = "=1.7.3"
+lalrpop-util = { version = "0.20.0", features = [ "lexer" ] }
+
+[build-dependencies]
+lalrpop = "0.20.0"
